# Deep-HYPNOTICA

./: .gitignore  README.md  main.py  pyproject.toml
Suivi_projet/: Traces_projet.docx
scripts/: paths.py  sfx_manager.py
scripts/chargement_components/: animation_logic.py  chargement.py  constants.py  resources.py
scripts/credits_components/: constants.py  credits_logic.py  resources.py  text_scroller.py
scripts/demarrage_components/: animation_logic.py  constants.py  demmarage_logic.py  resources.py
scripts/ecran_titre_components/: constants.py  ecran_titre_logic.py  text_utils.py  ui_elements.py
scripts/game/: game.py
scripts/game_elements/: background.py  constants.py  phone.py  player.py  resources.py  satiety.py
scripts/game_over_components/: constants.py  game_over_logic.py  text_scroller.py
scripts/instructions_components/: constants.py  instructions_logic.py  resources.py  text_utils.py
